--- a/myApp/package.json
+++ b/myApp/package.json
@@ -13,9 +13,9 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.11.14",
     "morgan": "~1.9.1",
-    "twig": "~0.10.3"
+    "twig": "~0.10.3",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
   }
 }
