--- a/myApp/.env
+++ b/myApp/.env
@@ -1,1 +1,3 @@
-URL_DB="mongodb+srv://tur098:tur098@cluster0.jnprs.mongodb.net/test"
+NAME_DB="test"
+URL_DB="mongodb+srv://tur098:tur098@cluster0.jnprs.mongodb.net/"
+NAME_COLLECTION="messageUser"
